<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.innf.changtu.view.activity.PrivacySettingActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/modify_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        android:clickable="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            >
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/privacy_setting_modify_password"
                android:textSize="16sp"
                android:textStyle="bold"
                style="?android:listSeparatorTextViewStyle"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                >

                <EditText
                    android:visibility="gone"
                    android:id="@+id/old_password"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/privacy_setting_old_password"
                    android:textSize="20sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                >

                <EditText
                    android:visibility="gone"
                    android:id="@+id/new_password"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/privacy_setting_new_password"
                    android:inputType="textPassword"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                >

                <EditText
                    android:visibility="gone"
                    android:id="@+id/repeat_password_edit_text"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/privacy_setting_repeat_new_password"
                    android:textSize="20sp"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/modify_password_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/ok"
                android:textSize="16sp"
                android:padding="5dp"
                android:visibility="gone"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
