<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/action_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/start_record"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">
            <TextView
                android:text="@string/start_record_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:listSeparatorTextViewStyle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <Button
                    android:id="@+id/start_position_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/normal_button_background"
                    tools:text="山西省太原市尖草坪区中北大学"/>


            </LinearLayout>

            <TextView
                android:text="@string/start_record_choose_place"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:listSeparatorTextViewStyle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >
                <Button
                    android:id="@+id/choose_area_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="请选择"/>
                <EditText
                    android:id="@+id/choose_place_edit_text"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:hint="请填写"/>
            </LinearLayout>

            <TextView
                android:text="@string/start_record_transportation"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:listSeparatorTextViewStyle"/>

            <Button
                android:id="@+id/select_transportation_button"
                android:text="请选择"
                android:layout_gravity="center_horizontal"
                android:layout_width="120dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/start_record_time_interval"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:listSeparatorTextViewStyle"/>

            <RadioGroup
                android:id="@+id/time_interval_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/time_interval_ten_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="10分钟"/>
                <RadioButton
                    android:id="@+id/time_interval_thirty_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30分钟"/>
                <RadioButton
                    android:id="@+id/time_interval_sixty_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="60分钟"/>
                <RadioButton
                    android:id="@+id/time_interval_other_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="自定义"/>
            </RadioGroup>

            <LinearLayout
                android:id="@+id/time_interval_other_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:gravity="center_horizontal">
                <EditText
                    android:id="@+id/time_interval_other_edit_text"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/time_interval_other_text_view"
                    android:text="分钟"
                    android:padding="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <TextView
                android:text="@string/start_record_select_contracts"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:listSeparatorTextViewStyle"/>

            <Button
                android:id="@+id/select_contracts_button"
                android:text="请选择"
                android:layout_gravity="center_horizontal"
                android:layout_width="120dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/start_record_remark"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/remark_edit_text"
                android:layout_width="match_parent"
                android:background="@drawable/bg_edit_text"
                android:layout_marginBottom="20dp"
                android:gravity="top"
                android:layout_height="75dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
